# uce

./: .env.docker.example  .env.example  .gitignore  DEMO_SCRIPT.md  DOCUMENTATION.md  Dockerfile  GRANT_ALIGNMENT.md  MANIFEST.in  OPERATOR_RUNBOOK.md  README.md  RELEASE_CHECKLIST.md  TECHNICAL_REPORT.md  TUTORIAL.md  config.py  config.yaml  docker-compose.yml  graph.py  graph_schema.md  impact.py  mcp_server.py  pyproject.toml  run.py  run_uce.py
artifacts/policies/: P-001.md  P-002.md  P-003.md  P-004.md
artifacts/requirements/: RQ-001.md  RQ-002.md  RQ-005.md  RQ-006.md  RQ-007.md  RQ-009.md  RQ-010.md
core/: .env.example  graph_db.py  rbac.py
demo/: gate_demo.html  run_demo.py
docker/: .dockerignore  Dockerfile  uce.config.yaml
docker/configs/: client.env.example  uce.config.yaml
docs/: API_CREDIT_CALCULATIONS.md  CONNECTING_AI_ASSISTANTS.md  DOCUMENTATION.md  OPERATOR_RUNBOOK.md  RELEASE_CHECKLIST.md  TECHNICAL_REPORT.md  TUTORIAL.md
evaluation/: results.json  run_evaluation.py  scenarios.json  summary.json
ingest/: __init__.py  api_graph.py  db_schema.py  file_graph.py  function_graph.py  link_tables.py  policies.py  requirements.py
ingestion/: code_parser.py  graph_builder.py  llm_client.py  llm_extract.py  llm_ingest.py  llm_rbac.py  mcp_neo4j.py  schema_parser.py
keycloak/import/: uce-realm-realm.json
neo4j_mcp/: __init__.py  server.py  utils.py
policies/: P-004.md
reasoning/: impact_analysis.py  trace_engine.py
requirements/: RQ-003.md  RQ-004.md  RQ-008.md
research/: report_draft.md  risk_model.md
research/final_report/: CS540_Final_Project_Report_UCE_Preet_Patel.docx  CS540_Final_Project_Report_UCE_Preet_Patel_v2.docx  create_cs540_final_report.py  ~$540_Final_Project_Report_UCE_Preet_Patel.docx
research/icml2026/: README.md
research/icmla_workshop/: ENFORCEMENT_RESULTS.md  EVALUATION.md  FINDINGS.md  LIVE_TOOL_VALIDATION.md  RETRIEVAL_RESULTS.md  consolidate_enforcement.py  consolidate_multi_repo.py  consolidate_retrieval_metrics.py  demo_scenarios_full.json  independent_oracle.py  ingest_governance.py  ingest_repo.py  replay_propose_change_live.py  run_ablation.py  run_agent_mcp_eval.py  run_anthropic_baseline.py  run_context_comparison.py  run_enforcement_eval.py  run_independent_eval.py  run_multi_repo_enforcement.py  run_multi_repo_eval.py  run_rbac_complexity.py  static_baseline.py  stats.py
research/supplemental_benchmarks/: README.md  run_benchmark.py  run_real_llm_baseline.py  (+1 more)
runtime/: updater.py  watcher.py
scripts/: bootstrap_keycloak.py
server/: mcp_server.py
tests/: test_code_parser.py  test_config.py  test_config_rbac.py  test_explain_violation.py  test_gate.py  test_graph_builder.py  test_llm_rbac.py  test_propose_change_tool.py  test_rbac.py  test_risk_model.py  test_role_resolution.py  test_schema_parser.py  test_trace_engine.py
uce/: __init__.py  cli.py  run.py
uce.egg-info/: PKG-INFO  SOURCES.txt
uce_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+112 files in other folders)
