[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uce_engine"
version = "0.2.1"
description = "Unified Context Engine"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [{name = "UCE Contributors"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "neo4j>=5.14.0",
  "watchdog>=3.0.0",
  "PyYAML>=6.0.1",
  "fastmcp>=0.1.0",
  "mcp>=0.1.0",
  "anthropic>=0.25.0",
  "openai>=1.0.0",
  "tree_sitter==0.20.4",
  "tree_sitter_languages==1.10.2",
  "pydantic>=2.0.0",
  "starlette>=0.36.0",
  "tiktoken>=0.5.0",
]

[project.scripts]
uce = "run:main"
neo4j-mcp = "neo4j_mcp.server:cli"

[tool.setuptools.packages.find]
include = ["core*", "ingestion*", "runtime*", "server*", "reasoning*", "neo4j_mcp*"]

[tool.setuptools]
include-package-data = true
py-modules = ["run", "run_uce"]

[tool.setuptools.package-data]
core = [".env.example"]
